--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -130,6 +131,7 @@
     <ClInclude Include="bad_login.h" />
     <ClInclude Include="bad_password.h" />
     <ClInclude Include="Chat.h" />
+    <ClInclude Include="Logger.h" />
     <ClInclude Include="Message.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="Users.h" />
@@ -138,6 +140,7 @@
     <ClCompile Include="bad_login.cpp" />
     <ClCompile Include="bad_password.cpp" />
     <ClCompile Include="Chat.cpp" />
+    <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Users.cpp" />
